# numerical_libraries

./: README.md
ARPACK2/: ARPACK2.vfproj
Ell1_Logistic/: Ell1_Logistic.cpp  Ell1_Logistic.icproj  Ell1_Logistic.sln  Ell1_Logistic.vcproj  Ell1_Logistic.vcxproj  Ell1_Logistic.vcxproj.filters  blas.h  classify.c  def.c  def.h  dmatrix.c  dmatrix.h  l1_logreg.c  l1_logreg.h  mmio.c  pcg.c  pcg.h  pkgdef.h  regpath.c  train.c  unistd.h  util.c  util.h
Ell1_Logistic/examples/: Makefile.am  Makefile.in  README  classify_internetad  classify_iono  classify_path_internetad  classify_path_iono  exd_iono_X  exd_iono_b  exs_internetad_X  exs_internetad_b  model_internetad  path_internetad  regpath_internetad  regpath_iono  result_internetad  train_internetad  train_iono
FastGaussTransform/: DataAdaptiveImprovedFastGaussTransform.cpp  DataAdaptiveImprovedFastGaussTransform.h  GaussTransform.cpp  GaussTransform.h  ImprovedFastGaussTransform.cpp  ImprovedFastGaussTransform.h  ImprovedFastGaussTransform2.h  ImprovedFastGaussTransformChooseParameters.cpp  ImprovedFastGaussTransformChooseParameters.h  ImprovedFastGaussTransformChooseTruncationNumber.cpp  ImprovedFastGaussTransformChooseTruncationNumber.h  KCenterClustering.cpp  KCenterClustering.h  klFastGaussTransform.cpp  kl_fast_gauss_transform.h
MatLib/: _demo_lsfit_linear.cpp  _demo_lsfit_nonlinear.cpp  _demo_lsfit_nonlinear2.cpp  _demo_minasa_1.cpp  _demo_minasa_2.cpp  _demo_mincg_1.cpp  _demo_mincg_2.cpp  _demo_minlbfgs_1.cpp  _demo_minlbfgs_2.cpp  _demo_minlm_fgh.cpp  _demo_minlm_fgj.cpp  _demo_minlm_fj.cpp  (+263 more)
sdpa/: f2c.h  (+31 more)
(+865 files in other folders)
