
# NOTE:
# Since 'make check' runs test scripts listed in dist_noinst_SCRIPTS
# in the given order, you need to put a 'train_<data>' script before
# the corresponding 'classify_<data>' script.
# That is,
# train_xxx should preceed classify_xxx
#
dist_noinst_SCRIPTS =       \
train_iono                  \
classify_iono               \
regpath_iono                \
classify_path_iono          \
train_internetad            \
classify_internetad         \
regpath_internetad          \
classify_path_internetad    

dist_noinst_DATA =          \
README                      \
exd_iono_X                  \
exd_iono_b                  \
exs_internetad_X            \
exs_internetad_b   

TESTS =                     \
train_iono                  \
classify_iono               \
regpath_iono                \
classify_path_iono          \
train_internetad            \
classify_internetad         
